--- a/src/package.json
+++ b/src/package.json
@@ -5,12 +5,22 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "apollo-client": "^1.0.2",
+    "apollo-server": "^0.3.3",
     "babel-runtime": "^6.20.0",
     "bcrypt": "^1.0.2",
+    "body-parser": "^1.17.1",
     "classnames": "^2.2.5",
+    "express": "^4.15.2",
+    "graphql": "^0.9.2",
+    "graphql-server-express": "0.6.0",
+    "graphql-tools": "^0.11.0",
+    "graphql-typings": "0.0.1-beta-2",
     "meteor-node-stubs": "~0.2.4",
+    "mysql": "^2.13.0",
     "react": "^15.4.2",
-    "react-addons-pure-render-mixin": "^15.5.1",
-    "react-dom": "^15.4.2"
+    "react-addons-pure-render-mixin": "^15.5.2",
+    "react-dom": "^15.4.2",
+    "sequelize": "^3.30.4"
   }
 }
