--- a/src/package.json
+++ b/src/package.json
@@ -14,13 +14,26 @@
     "express": "^4.15.2",
     "graphql": "^0.9.2",
     "graphql-server-express": "0.6.0",
+    "graphql-tag": "^2.0.0",
     "graphql-tools": "^0.11.0",
     "graphql-typings": "0.0.1-beta-2",
     "meteor-node-stubs": "~0.2.4",
     "mysql": "^2.13.0",
-    "react": "^15.4.2",
+    "react": "^15.5.4",
     "react-addons-pure-render-mixin": "^15.5.2",
-    "react-dom": "^15.4.2",
+    "react-apollo": "^1.0.1",
+    "react-dom": "^15.5.4",
     "sequelize": "^3.30.4"
+  },
+  "devDependencies": {
+    "@meteorjs/eslint-config-meteor": "^1.0.5",
+    "babel-eslint": "^7.2.1",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-import-resolver-meteor": "^0.4.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-meteor": "^4.0.1",
+    "eslint-plugin-react": "^6.10.3"
   }
 }
