--- a/src/package.json
+++ b/src/package.json
@@ -5,12 +5,37 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "apollo-client": "^1.0.2",
+    "apollo-server": "^0.3.3",
     "babel-runtime": "^6.20.0",
     "bcrypt": "^1.0.2",
+    "body-parser": "^1.17.1",
     "classnames": "^2.2.5",
+    "express": "^4.15.2",
+    "graphql": "^0.9.2",
+    "graphql-server-express": "0.6.0",
+    "graphql-tag": "^2.0.0",
+    "graphql-tools": "^0.11.0",
+    "graphql-typings": "0.0.1-beta-2",
     "meteor-node-stubs": "~0.2.4",
-    "react": "^15.4.2",
-    "react-addons-pure-render-mixin": "^15.5.1",
-    "react-dom": "^15.4.2"
+    "mysql": "^2.13.0",
+    "prop-types": "^15.5.8",
+    "react": "^15.5.4",
+    "react-addons-pure-render-mixin": "^15.5.2",
+    "react-addons-update": "^15.5.2",
+    "react-apollo": "^1.0.1",
+    "react-dom": "^15.5.4",
+    "sequelize": "^3.30.4"
+  },
+  "devDependencies": {
+    "@meteorjs/eslint-config-meteor": "^1.0.5",
+    "babel-eslint": "^7.2.1",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-import-resolver-meteor": "^0.4.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-meteor": "^4.0.1",
+    "eslint-plugin-react": "^6.10.3"
   }
 }
