API change, chart component added
* Chart component added to the front page
* #10 chart has no search, reloads itself when receives new info, getAll
instead of by user
* More consistently ES6

--- a/src/package.json
+++ b/src/package.json
@@ -19,12 +19,15 @@
     "graphql-typings": "0.0.1-beta-2",
     "meteor-node-stubs": "~0.2.4",
     "mysql": "^2.13.0",
+    "pg": "^6.2.2",
+    "pg-hstore": "^2.3.2",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-addons-pure-render-mixin": "^15.5.2",
     "react-addons-update": "^15.5.2",
     "react-apollo": "^1.0.1",
     "react-dom": "^15.5.4",
+    "recharts": "^0.22.4",
     "sequelize": "^3.30.4"
   },
   "devDependencies": {
